--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,8 +49,8 @@ jobs:
       run: |
         cp build.config padavan-ng/trunk/.config
         pushd padavan-ng/trunk
-        ./clear_tree.sh
-        ./build_firmware.sh
+        ./clear_tree
+        ./build_firmware
         popd
 
     - name: Run custom post-build script
