--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,7 @@ jobs:
         cp build.config padavan-ng/trunk/.config
         pushd padavan-ng/trunk
         ./clear_tree
-        fakeroot ./build_firmware
+        fakeroot ./build_firmware MI-R3P
         popd
 
     - name: Run custom post-build script
