--- a/build.config
+++ b/build.config
@@ -6,8 +6,8 @@ CONFIG_PRODUCT=MT7621
 CONFIG_FIRMWARE_PRODUCT_ID="MI-R3P"
 
 ### Linux kernel and toolchain
-#CONFIG_LINUXDIR=linux-3.4.x
-#CONFIG_TOOLCHAIN_DIR=/opt/padavan-ng/toolchain-mipsel
+CONFIG_LINUXDIR=linux-3.4.x
+CONFIG_TOOLCHAIN_DIR=/opt/rt-n56u/toolchain-mipsel
 
 ############################################################
 ### Linux kernel configuration
