--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,9 +51,9 @@ jobs:
 
     - name: Prepare artifacts
       run: |
-        FW_FILE_NAME="$(find rt-n56u/trunk/images -type f -regextype posix-extended -iregex ".*\.(trx|bin)$" \
+        FW_FILE_NAME="$(find /opt/rt-n56u/trunk/images -type f -regextype posix-extended -iregex ".*\.(trx|bin)$" \
                         -printf "%T@\t%f\n" | sort -V | tail -1 | cut -f2)"
-        cp "rt-n56u/trunk/images/$FW_FILE_NAME" .
+        cp "/opt/rt-n56u/trunk/images/$FW_FILE_NAME" .
         echo "FW_FILE_NAME=$FW_FILE_NAME" >> $GITHUB_ENV
         echo "BUILD_TIMESTAMP=$(date '+%Y.%m.%d_%H.%M.%S')" >> $GITHUB_ENV
 
@@ -65,16 +65,3 @@ jobs:
         path: |
           ${{ env.FW_FILE_NAME }}
           build.config
-
-    - name: Check firmware size
-      run: |
-        partitions=rt-n56u/trunk/configs/boards/$CONFIG_VENDOR/$CONFIG_FIRMWARE_PRODUCT_ID/partitions.config
-        max_fw_size="$(awk '/Firmware/ { getline; getline; sub(",", ""); print strtonum($2); }' "$partitions")"
-        fw_size="$(stat -c %s "$FW_FILE_NAME")"
-
-        if ((fw_size > max_fw_size)); then
-          fw_size_fmtd="$(numfmt --grouping "$fw_size") bytes"
-          max_fw_size_fmtd="$(numfmt --grouping "$max_fw_size") bytes"
-          echo "Firmware size ($fw_size_fmtd) exceeds max size ($max_fw_size_fmtd) for your target device"
-          exit 1
-        fi
